--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 *, ::before, ::after {
-    box-sizing: inherit;
-    padding: 0;
-    margin: 0;
-    scroll-behavior: smooth;
-  }
-    
-  html {
-    box-sizing: border-box;
-  }
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
+}
+  
+html {
+  box-sizing: border-box;
+  font-family: "Times New Roman";
+}
